--- a/Loja_Classes/index.html
+++ b/Loja_Classes/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
 
     <script src="classes.js"></script>
@@ -15,11 +16,13 @@
 
 
     <button onclick="meusProdutosTop.exibirNoHTML()"> Meus favoritos</button>
-    
+    <button onclick="meusProdutosTop.exibirTodosNoHTML()"> Todos os produtos</button>
+
     <div id="produtos" class="container-cards">
 
     </div>
-    
+
 
 </body>
+
 </html>
