--- a/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/index.html
+++ b/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+     <p id="text">
+
+    </p>
     <script src="classes.js"></script>
     <script src="objetos.js"></script>
+   
 </body>
 </html>
