--- a/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/index.html
+++ b/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,22 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
+</head>
+
 <body>
-     <p id="text">
+    <p id="text">
 
     </p>
+    <div><label for=""></label>Turma<input type="text"></div>
+    <div><label for=""></label>Primeiro Nome<input type="text"></div>
+    <div><label for=""></label>Segundo Nome<input type="text"></div>
+    <div><label for=""></label>Data de nascimento<input type="text"></div>
+    <div><label for=""></label>Matrícula<input type="text"></div>
     <script src="classes.js"></script>
     <script src="objetos.js"></script>
-   
+
 </body>
+
 </html>
