--- a/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/index.html
+++ b/[POO - Manhã][Temporada 2][Aula 1][Melrick e Kemylly]/index.html
@@ -21,6 +21,7 @@
     <div><label for=""></label>Segundo Nome<input type="text"></div>
     <div><label for=""></label>Data de nascimento<input type="text"></div>
     <div><label for=""></label>Matrícula<input type="text"></div>
+    <button>Submit</button>
     <script src="classes.js"></script>
     <script src="objetos.js"></script>
 
