--- a/[POO - Manhã][Temporada 2][Atividade Estoque][Melrick e Kemylly]/index.html
+++ b/[POO - Manhã][Temporada 2][Atividade Estoque][Melrick e Kemylly]/index.html
@@ -11,13 +11,11 @@
 <body>
     <form action="#">
         <div>
-            <label for=""></label>
-            Descrição do Produto
+            <label for="">Descrição do Produto</label>
             <input type="text" id="iptDescricao">
         </div>
         <div>
-            <label for=""></label>
-            Preço do Produto
+            <label for="">Preço do Produto</label>
             <input type="text" id="iptPreco">
         </div>
         <input type="button" value="Adicionar" id="btnCadastrar">
