--- a/[POO - Manhã][Temporada 2][Atividade Estoque][Melrick e Kemylly]/index.html
+++ b/[POO - Manhã][Temporada 2][Atividade Estoque][Melrick e Kemylly]/index.html
@@ -18,6 +18,10 @@
             <label for="">Preço do Produto</label>
             <input type="text" id="iptPreco">
         </div>
+        <div>
+            <label for="">Quantidade</label>
+            <input type="text" id="iptQuant">
+        </div>
         <input type="button" value="Adicionar" id="btnCadastrar">
     </form>
 
